@@ -1193,19 +1193,24 @@ futures::Future<OperationResult> figuresOnCoordinator(ClusterFeature& feature,
   auto cb = [isRocksDB, details](std::vector<Try<network::Response>>&& results) mutable -> OperationResult {
     auto handler = [isRocksDB, details](Result& result, VPackBuilder& builder, ShardID&,
                       VPackSlice answer) mutable -> void {
-      if (answer.isObject()) {
-        VPackSlice figures = answer.get("figures");
-        // add to the total
-        if (figures.isObject()) {
-          if (isRocksDB) {
-            recursiveAddRocksDB(details, figures, builder);
-          } else {
-            recursiveAddMMFiles(figures, builder);
+      if (!answer.isObject()) {
+         // didn't get the expected response
+         result.reset(TRI_ERROR_INTERNAL);
+      } else if (!result.fail()) {
+        Result r = network::resultFromBody(answer, TRI_ERROR_NO_ERROR);
+        if (r.fail()) {
+          result.reset(r);
+        } else {
+          VPackSlice figures = answer.get("figures");
+          // add to the total
+          if (figures.isObject()) {
+            if (isRocksDB) {
+              recursiveAddRocksDB(details, figures, builder);
+            } else {
+              recursiveAddMMFiles(figures, builder);
+            }
           }
         }
-      } else {
-        // didn't get the expected response
-        result.reset(TRI_ERROR_INTERNAL);
       }
     };
     auto pre = [](Result&, VPackBuilder& builder) -> void {
